# agentic-sales-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yaml  main.py  pyproject.toml  serverctl
.cursor/rules/: testing.mdc
ai_docs/prompts/: generate-tests.md
google_workspace_mcp_server/: Dockerfile  dev.sh  main.py
notebooks/: b2b_agent_mcp_tests.ipynb  b2b_agent_notebook.ipynb  vector_storage_test.ipynb
src/application/agents/: data_enrichment_agent.py  lead_collector_agent.py  lead_finder_agent.py  lead_screener_agent.py  lead_storage_agent.py  orchestrator_agent.py  summary_agent.py
src/application/graphs/: b2b_workflow.py  builder.py  edges.py  nodes.py
src/application/prompts/: README.md
src/application/schema/: contact.py  icp.py  lead.py  state.py
src/application/security/: input_validator.py
src/application/services/: chat_service.py  search_service.py
src/application/tools/: ICP.csv  google_workspace_tools.py  retrieve_icp_tool.py  search_leads_tool.py  search_memories_tool.py  search_tool.py  update_memories_tool.py
src/domain/: __init__.py
src/domain/conditions/: enrichment_checker.py  routing.py
src/domain/interfaces/: lead_repository.py
src/infrastructure/: __init__.py  container.py
src/infrastructure/clients/: search_service.py
src/infrastructure/knowledge_base/: __init__.py
src/infrastructure/knowledge_base/vectordb/: __init__.py  config.py  embedding_service.py  lead_storage.py
src/infrastructure/mcp_clients/: client.py
src/infrastructure/mcp_clients/crm/: client.py
src/infrastructure/memory/long_term/: generate_embbedings.py
src/infrastructure/memory/long_term/mem0/: mem0_client.py
src/infrastructure/memory/long_term/qdrant/: vector_database.py
src/infrastructure/memory/short_term/redis/: redis_saver.py
src/presentation/: __init__.py
src/presentation/api/: gradio_app.py
