[project]
name = "b2b-agent"
version = "0.1.0"
description = "B2B Agent - Multi-agent workflow system for lead finding, collection, and enrichment"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.4.0",
    "langgraph>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typing-extensions>=4.8.0",
    "python-dotenv>=1.0.0",
    "gradio>=6.0.0",
    "workspace-mcp>=1.5.5",
    "langchain-mcp-adapters>=0.1.14",
    "asyncio>=4.0.0",
    "langgraph-checkpoint-redis>=0.3.0",
    "qdrant-client>=1.16.2",
    "mem0ai>=1.0.1",
]

[project.optional-dependencies]
visualization = [
    "graphviz>=0.20.0",
    "pillow>=10.0.0",
    "ipython>=8.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[tool.setuptools]
packages = ["application", "domain", "infrastructure", "presentation"]

[tool.setuptools.package-dir]
application = "src/application"
domain = "src/domain"
infrastructure = "src/infrastructure"
presentation = "src/presentation"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
